--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -1,10 +1,14 @@
 .productList {
     display: flex;
-    gap: 5px;
+    gap: 25px;
+    margin-top: 10px;
+    width: 80vw;
+    flex-wrap: wrap;
+}
 
-    width: fit-content;
-    max-width: 100%;
+.productList.scroll {
 
+    flex-wrap: nowrap;
     overflow-x: scroll;
 
     /* snap */
@@ -14,7 +18,6 @@
     scroll-snap-type: x mandatory;
 }
 
-
 .productList::-webkit-scrollbar {
     display: none;
 }
@@ -23,16 +26,14 @@
     scrollbar-width: none; 
 }
 
-
 .productBox {
     padding-left: 10px;
     padding-right: 10px;
     position: relative;
 
-    margin: 10px;
-
     width: 250px;
     height: 360px;
+    margin-bottom: 10px;
 
     background-color: white;
 
